infinite scroll, search and send request friend
